[gd_scene load_steps=12 format=3 uid="uid://bq1enqgn0odw4"]

[ext_resource type="Script" path="res://scripts/space_ship.gd" id="1_fjdmo"]
[ext_resource type="PackedScene" uid="uid://dxx10vdgr7ufa" path="res://scenes/laser.tscn" id="2_v8ax5"]
[ext_resource type="ArrayMesh" uid="uid://b2pd1v64yb0au" path="res://models/Spacecraft_comete.obj" id="3_r6kpr"]
[ext_resource type="Script" path="res://scripts/visual_loop.gd" id="4_ht8p1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p0r12"]
radius = 0.599621

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0e18k"]
albedo_color = Color(0, 0.666667, 0.607843, 1)

[sub_resource type="SystemFont" id="SystemFont_l6550"]
subpixel_positioning = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jt1wo"]
shading_mode = 0

[sub_resource type="TextMesh" id="TextMesh_nqy8w"]
material = SubResource("StandardMaterial3D_jt1wo")
text = "HP

"
font = SubResource("SystemFont_l6550")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wkeri"]
shading_mode = 0

[sub_resource type="TextMesh" id="TextMesh_yy0xj"]
material = SubResource("StandardMaterial3D_wkeri")
text = "100
"

[node name="SpaceShip" type="RigidBody3D"]
mass = 100.0
gravity_scale = 0.0
can_sleep = false
angular_damp = 3.0
script = ExtResource("1_fjdmo")
linear_max_speed = 30.0
rotational_torque = 50.0
laser_scene = ExtResource("2_v8ax5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0602649)
shape = SubResource("SphereShape3D_p0r12")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 3.24475e-14, 8.74228e-08, 2.26267e-08, 0.965926, 0.258819, -8.44439e-08, 0.258819, -0.965926, 0, 1.38392, -4.33)

[node name="SpacecraftComete" type="MeshInstance3D" parent="."]
transform = Transform3D(-3.49691e-09, 0, -0.08, 0, 0.08, 0, 0.08, 0, -3.49691e-09, 0.004, -0.73, 0.3)
material_override = SubResource("StandardMaterial3D_0e18k")
gi_mode = 2
mesh = ExtResource("3_r6kpr")
skeleton = NodePath("../..")
script = ExtResource("4_ht8p1")

[node name="Gun" type="Node3D" parent="."]

[node name="SpawnPoint" type="Marker3D" parent="Gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)

[node name="FiringTimer" type="Timer" parent="Gun"]
wait_time = 0.25

[node name="UI" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0312259, -0.258885, -0.565734)

[node name="Hp_Display" type="MeshInstance3D" parent="UI"]
transform = Transform3D(-1, 0, -8.74228e-08, -4.37114e-08, 0.866025, 0.5, 7.57103e-08, 0.5, -0.866025, -0.00348926, 0.897804, -0.254664)
cast_shadow = 0
mesh = SubResource("TextMesh_nqy8w")

[node name="Hp_Text" type="MeshInstance3D" parent="UI"]
transform = Transform3D(-1, 4.37114e-08, 7.57103e-08, 7.57103e-08, 0.866025, 0.5, -4.37114e-08, 0.5, -0.866025, 0, 0.805231, -0.362548)
cast_shadow = 0
mesh = SubResource("TextMesh_yy0xj")

[connection signal="timeout" from="Gun/FiringTimer" to="." method="_on_firing_timer_timeout"]
